--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 auto: true
 permalink: /:categories/:year/:title/
+markdown: redcarpet
+highlighter: pygments
+redcarpet:
+    extensions: ["footnotes"]
